beginnings of tab functionality

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+
 	<head>
 		<title>Robbie Tillman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -17,25 +18,35 @@
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
-
+			
 				<!-- Header -->
 					<header id="header">
+						<nav>
+							<ul>
+								
+								<li><a href="index.html">Home</a></li>
+								<li><a href="projects.html">Projects</a></li>
+								<li><a href="reflections.html">Reflections</a></li>
+								<li><a href="about.html">About</a></li>
+							
+							</ul>
+						</nav>
 						<h1>Robbie Tillman</h1>
 						<p>Developer &nbsp;&bull;&nbsp; Entrepreneur &nbsp;&bull;&nbsp; Student</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://linkedin.com/in/robertdtillman" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/robbietillman" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>						
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Robbie Tillman. Design: <a href="http://robbietillman.com">Robbie Tillman</a>.</span>
+						<span class="copyright">&copy; Robbie Tillman. Design: <a href="https://robbietillman.com">Robbie Tillman</a>.</span>
 					</footer>
 
 			</div>
