progress, a bit wonky but i'm playing  with the menu bar to try to move it up top

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
 			
 				<!-- Header -->
 					<header id="header">
-						<nav>
+						<nav style = "position: relative ! important">
 							<ul>
 								
-								<li><a href="index.html">Home</a></li>
+								<li><a href="index.html"; style= "position:absolute ! important; top: 0px ! important">Home</a></li>
 								<li><a href="projects.html">Projects</a></li>
 								<li><a href="reflections.html">Reflections</a></li>
 								<li><a href="about.html">About</a></li>
