--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
 			
 				<!-- Header -->
 					<header id="header">
-						<nav style = "position: relative ! important">
+						<nav>
 							<ul>
 								
-								<li><a href="index.html"; style= "position:absolute ! important; top: 0px ! important">Home</a></li>
-								<li><a href="projects.html">Projects</a></li>
-								<li><a href="reflections.html">Reflections</a></li>
-								<li><a href="about.html">About</a></li>
+								<li><a href="index.html"; style= "position:relative ! important; top: -125px ! important">Home</a></li>
+								<li><a href="projects.html"; style= "position:relative ! important; top: -125px ! important">Projects</a></li>
+								<li><a href="reflections.html"; style= "position:relative ! important; top: -125px ! important">Reflections</a></li>
+								<li><a href="about.html"; style= "position:relative ! important; top: -125px ! important">About</a></li>
 							
 							</ul>
 						</nav>
