Got menu at top with big enough font

--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
 						<nav>
 							<ul>
 								
-								<li><a href="index.html"; style= "position:relative ! important; top: -125px ! important">Home</a></li>
-								<li><a href="projects.html"; style= "position:relative ! important; top: -125px ! important">Projects</a></li>
-								<li><a href="reflections.html"; style= "position:relative ! important; top: -125px ! important">Reflections</a></li>
-								<li><a href="about.html"; style= "position:relative ! important; top: -125px ! important">About</a></li>
+								<li><a href="index.html"; style="position:relative; top: -125px ! important; font-size: 1.25em">Home</a></li>
+								<li><a href="projects.html"; style="position:relative; top: -125px; font-size: 1.25em">Projects</a></li>
+								<li><a href="reflections.html"; style="position:relative; top: -125px; font-size: 1.25em">Reflections</a></li>
+								<li><a href="about.html"; style="position:relative; top: -125px; font-size: 1.25em">About</a></li>
 							
 							</ul>
 						</nav>
